--- a/Index.html
+++ b/Index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>My Web Page</title>
-  <link rel="stylesheet" type="text/css" href="Objects.css">
+  <link rel="stylesheet" type="text/css" href="Style.css">
 </head>
 <body>
     <div class="topbar-2">
