--- a/Index.html
+++ b/Index.html
@@ -62,6 +62,6 @@
   <h3>Console Output:</h3>
   <pre id="console-output"></pre>
 </div>
-  <script src="Objects.js"></script>
+  <script src="Script.js"></script>
 </body>
 </html>
