--- a/Dotnotation.html
+++ b/Dotnotation.html
@@ -7,7 +7,7 @@
 <body>
     <div class="topbar-2">
         <ul class="topbar-2-list">
-            <li><a href="Index.html">Objects</a></li>
+            <li><a href=index.html">Objects</a></li>
             <li><a href="Dotnotation.html">Dot Notation</a></li>
             <li><a href="Functions.html">Functions</a></li>
             <li><a href="IfElseSwitch.html">If Else & Switch</a></li>
